# Dwellers_app

./: .gitignore  README.md  package-lock.json  requirements.txt  run_bot.py
.github/workflows/: django.yml
backend/: app.py  manage.py  pyproject.toml
backend/authe/: apps.py  models.py
backend/authe/migrations/: 0001_initial.py
backend/authentication/: views.py
backend/bot/: apps.py  filters.py  models.py  services.py  states.py
backend/bot/handlers/: auth.py  menu.py  register_handlers.py
backend/bot/migrations/: 0001_initial.py  0002_message_delete_user.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/dwellers/: asgi.py  settings.py  urls.py  wsgi.py
backend/neighbour/: admin.py  models.py  serializers.py  urls.py  views.py
backend/neighbour/migrations/: 0001_initial.py  0002_remove_user_moderation_status_user_bio_and_more.py
backend/profiles/models/: posts.py  user.py
backend/social/: models.py
backend/social/migrations/: 0001_initial.py
backend/telegrambot/: bot.py
docs/: Бизнес-требования.md  Дизайн-бук.md
dweller/: manage.py
dweller/dweller/: asgi.py  settings.py  urls.py  wsgi.py
dweller/neighbour/: apps.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/UsersTest/: user.dart  users_screen.dart
src/: manage.py  server.py
src/config/: settings.py
tgbot/: dispatcher.py  models.py
tgbot/handlers/: comman.py
