[tool.poetry]
name = "dwellers-app"
version = "0.1.0"
description = "Social club. Django + Flutter"
authors = ["Alexsandr Kuznetsov <kuznetsovjobstr@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
